first metrics